# embedding_jp_api

./: .gitignore  Dockerfile  Dockerfile.cpu  README.md  REVIEW.md  baseline_main_failures.csv  baseline_main_stats.csv  baseline_main_stats_history.csv  diff_output.txt  evaluation_optimized_stats.csv  evaluation_optimized_stats_history.csv  locustfile.py  nohup.out  pyproject.toml  run.sh
.github/workflows/: ci.yml
config/: models.yml
src/app/: config.py  main.py  models.py  schemas.py
src/benchmarks/: benchmark_embedding.py  benchmark_topk.py
src/tests/: test_embeddings.py  test_exception_handling.py  test_extended_features.py  test_logic_reproduction.py  test_new_features.py  test_rerank.py  test_validation.py
